Revert "attempt to fix the CI failures #2"
This reverts commit ade31bb2